# f1-race-replay

./: .gitignore  README.md  main.py  pyproject.toml
src/: bayesian_tyre_model.py  f1_data.py  run_session.py  tyre_degradation_integration.py  ui_components.py
src/cli/: race_selection.py
src/gui/: insights_menu.py  pit_wall_window.py  pit_wall_window_template.py  race_selection.py
src/insights/: driver_telemetry_window.py  example_pit_wall_window.py  race_control_feed_window.py  telemetry_stream_viewer.py  track_position_window.py  tyre_strategy_window.py
src/interfaces/: qualifying.py  race_replay.py
src/lib/: season.py
src/services/: stream.py
